# CodeForgeAI

./: .env.example  .gitignore  PLAN.md  PROGRESS.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
codeforge/: __init__.py  cli.py
codeforge/agents/: llm_mixin.py
codeforge/agents/code_reviewer/: __init__.py  agent.py  analyzers.py  auto_fixer.py  (+1 more)
codeforge/api/: __init__.py  app.py  routes.py  session.py
codeforge/artifacts/: __init__.py  prd.py  tech_spec.py
codeforge/core/: __init__.py  agent_registry.py  checkpoint.py  conflict_resolver.py  llm_client.py  message_bus.py  message_protocol.py  orchestrator.py  state_store.py
codeforge/dashboard/: __init__.py  app.py
codeforge/git/: __init__.py  branch_manager.py  commit_manager.py  repo_manager.py
codeforge/plugins/: __init__.py  loader.py  registry.py
codeforge/prompts/: __init__.py  code_reviewer.py  code_writer.py  devops.py  product_manager.py  system_architect.py  test_engineer.py
codeforge/utils/: __init__.py  config.py  exceptions.py  logging.py  validation.py
demos/: demo_runner.py  e2e_demo.py  expense_tracker_demo.py  run_demo.py  todo_app_demo.py
tests/: __init__.py  conftest.py
tests/test_agents/: test_code_reviewer.py  test_code_writer.py  test_product_manager.py  test_system_architect.py  test_test_engineer.py
tests/test_artifacts/: __init__.py  test_artifact_models.py
tests/test_core/: __init__.py  test_agent_registry.py  test_checkpoint.py  test_conflict_resolver.py  test_e2e_pipeline.py  test_llm_client.py  test_message_bus.py  test_message_protocol.py  test_orchestrator.py  test_state_store.py
tests/test_dashboard/: __init__.py
tests/test_git/: __init__.py  test_devops.py  test_git_integration.py
(+38 files in other folders)
